<resources>
    <string name="app_name">Parcel_Checker_APP</string>
    <string name="input_query_text_hint">Podaj numer przesyłki</string>
    <string name="search_button_text">Sprawdź Przesyłkę</string>
    <string name="nazwa_event_text">Nazwa zdarzenia</string>
    <string name="nazwa_jednostki_event_text">Nazwa Jednostki</string>
    <string name="data_event_text">Data</string>
    <string name="parcel_name_AddTextView">Nazwa : </string>
    <string name="parcel_name_hint">Wpisz nazwę przesyłki</string>
    <string name="parcel_num_AddTextView">Numer :</string>
    <string name="parcel_num_hint">Wpisz numer przesyłki</string>
    <string name="add_parcel_button">Dodaj Przesyłkę</string>
    <string name="statusy_przesylki">Wszystkie Przesyłki</string>
    <string name="parcel_curr_status_TextView">Status :</string>
</resources>