<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".AddParcelActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/parcel_name_AddTextView"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/parcelName_Add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:hint="@string/parcel_name_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/parcel_num_AddTextView"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/parcelNum_Add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:hint="@string/parcel_num_hint"/>
    </LinearLayout>
    <Button
        android:id="@+id/parcel_Add_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_parcel_button"/>

</LinearLayout>