<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nazwa_event"
        android:text="@string/nazwa_event_text"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/nazwaJ_event"
        android:text="@string/nazwa_jednostki_event_text"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/data_event"
        android:text="@string/data_event_text"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceSmall" />
    <View
        android:background="@color/purple_700"
        android:layout_width="match_parent"
        android:layout_height="2dp" />
</LinearLayout>