<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:text="@string/parcel_name_AddTextView"
            android:layout_marginEnd="20dp" />
        <TextView
            android:id="@+id/parcelName_TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAutofill="no"
            android:textSize="20sp"
            android:text="test"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginTop="2dp">
        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:text="@string/parcel_num_AddTextView"
            android:layout_marginEnd="20dp" />
        <TextView
            android:id="@+id/parcelNum_TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="test"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="2dp">
        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:text="@string/parcel_curr_status_TextView"
            android:layout_marginEnd="20dp" />
        <TextView
            android:id="@+id/currStatus_TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="test"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="imageDisplay"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:scaleType="center"
            android:src="@drawable/ic_baseline_track_changes_24" />
        <ImageView
            android:id="@+id/edit_ImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="imageEdit"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:scaleType="center"
            android:src="@drawable/ic_baseline_edit_24" />
        <ImageView
            android:id="@+id/delete_ImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="iamgeDelete"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:scaleType="center"
            android:src="@drawable/ic_baseline_delete_forever_24" />
    </LinearLayout>
    <View
        android:background="@color/purple_700"
        android:layout_width="match_parent"
        android:layout_height="2dp" />
</LinearLayout>